--- a/pom.xml
+++ b/pom.xml
@@ -9,4 +9,11 @@
     <version>1.0-SNAPSHOT</version>
 
 
+    <repositories>
+        <repository>
+            <id>Maven Central Repository</id>
+            <url>http://repo1.maven.org/maven2</url>
+        </repository>
+    </repositories>
+
 </project>
