в гитигнор добавлены файлы идеевского проекта

--- a/.gitignore
+++ b/.gitignore
@@ -23,5 +23,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
-/.idea/codeStyleSettings.xml
-/.idea/misc.xml
+/.idea/
+target/
+working-dir/sample.tsv.bak
+/SpentResourcesAnalyzer.iml
